--- a/patstavigais_darbs/templates/user.html
+++ b/patstavigais_darbs/templates/user.html
@@ -5,8 +5,8 @@
     <title>Users</title>
 </head>
 <body>
-    <strong>{{ user.username }}</strong> <br>
+    Name:<strong> {{ user.username }}!</strong> <br>
     E-mail: {{ user.e_mail }}
-    xxx: {{ user.xxx }}
+    Reason: {{ user.reason }}
 </body>
 </html>
