--- a/patstavigais_darbs/templates/users.html
+++ b/patstavigais_darbs/templates/users.html
@@ -15,7 +15,7 @@
         <a href="{% url 'get_visit' visit_id=user.id %}">
          <div style="color: magenta"> Vārds: {{ user.username }}
              E-mail: {{ user.e_mail }}
-             xxx: {{ user.xxx }}
+             Reason: {{ user.reason }}
          </div><br>
         </a>
         {% endfor %}
