--- a/patstavigais_darbs/templates/usershtml.html
+++ b/patstavigais_darbs/templates/usershtml.html
@@ -7,6 +7,7 @@
 <body>
 <form action="" method="post">
      {% csrf_token %}
+        <p>Select from HTML form</p>
         <input type="text" id="users" name="users" value="users"><br>
         <input type="submit">
     </form>
